fixed screen obverflow on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -116,7 +116,7 @@ button:hover{
     content: "It feels like: ";
 }
 
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 600px) {
     .input-div, #form{
         display: flex;
         flex-direction: column;
@@ -128,13 +128,10 @@ button:hover{
         text-align: center;
     }
     section{
-        width: 100vw;
-        padding: 50px;
+        width: 100%;
     }
     .data-container{
-        width: 70%;
-        padding-left: 10px;
-        padding-right: 10px;
+        width: 75%;
     }
 
     form{
